Fixed scrollbar to top of page

--- a/src/styles/components/_searchbar.scss
+++ b/src/styles/components/_searchbar.scss
@@ -7,7 +7,11 @@
   top: 0;
   height: max-content;
   gap: $space-smd;
-  margin-bottom: 2rem;
+
+  // Make sure search bar is always above content
+  background-color: $color-darker-blue;
+  z-index: 15;
+  padding-bottom: $space-smd;
 
   &__button {
     border: none;
