--- a/src/styles/layouts/_movies.scss
+++ b/src/styles/layouts/_movies.scss
@@ -22,7 +22,6 @@
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(16rem, 28rem));
       gap: $space-md;
-      overflow-y: auto;
     }
   }
 }
